# tokenize-uk

./: .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/workflows/: release.yml  test.yml  upstream-watch.yml
docs/: Makefile  api.md  conf.py  design.md  draft-andriy-ping.md  history.md  index.rst  installation.rst  make.bat  modules.rst  readme.rst  tokenize_uk.rst  usage.rst
scripts/: benchmark.py
scripts/java-harness/: Driver.java  LT_COMMIT  README.md
scripts/java-harness/org/languagetool/tokenizers/: Tokenizer.java
tests/: test_cli.py  test_properties.py  test_spacy.py  test_tokenize_uk.py  test_word_tokenizer.py
tests/cases/: nlp.json  wiki.json
tests/data/ci_corpus/: ATTRIBUTION.md  uk_wikipedia.txt
tokenize_uk/: __init__.py  __main__.py  legacy.py  pipeline.py  spacy.py  test_tokenize_uk.py  tokenize_uk.py  utils.py
